# anyremote-j2me-client

./: ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  configure.in
specs/: anyremote-J2ME-client-fedora.spec  anyremote-J2ME-client-mdv.spec  anyremote-J2ME-client-suse.spec  anyremote-J2ME-client.spec
src/: ARProtocol.java  BtComm.java.jsr82  CanvasConsumer.java  CanvasPanel.java  CanvasScreen.java  ControlForm.java  Controller.java.jsr82  Controller.java.nojsr82  FileManager.java  ListForm.java  MANIFEST-NOJSR82.template  MANIFEST.template  MANIFEST64.template  Makefile.am  SplashScreen.java  TextScreen.java  WinManager.java
